The end of Landing_Page Making last 2 sections, litle correct in main section changing gap value.

--- a/style.css
+++ b/style.css
@@ -6,8 +6,13 @@ body{
 }
 .wraper{
     display: flex;
-    flex-direction: column;
-    
+    flex-direction: column; 
+}
+.links:hover{
+    cursor: pointer;
+}
+button:hover{
+    cursor: pointer;
 }
 ul{
     list-style: none;
@@ -33,10 +38,11 @@ ul{
     background-color: #1F2937;
     display: flex;
     align-items: center;
-    justify-content: center
+    justify-content: center;
+    gap: 20px;
 }
 .left-block{
-       width: 450px;
+       width: 420px;
        height: 300px;
 }
 .left-block h1{
@@ -64,10 +70,7 @@ h1{
 }
 img{
     height: 250px;
-}
-.info{
-    padding-left: 60px;
-    padding-right: 60px;
+    
 }
 
 .quote-block{
@@ -111,6 +114,7 @@ img{
 .blocks{
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 65px;
 }
 .block{
@@ -123,17 +127,46 @@ img{
     display: flex;
     gap: 65px;
     justify-content: center;
+    align-items: center;
 }
 .texts p{
     width: 100px;
     height: 100px;
 }
 
+.action{
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .blue{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: #3882F6;
+    padding: 5px 60px 5px 60px;
+    gap:300px;
     height: 150px;
-    margin: 60px;
     border-radius: 10px;  
 }
+.left-text{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.right-button button{
+    background-color: #3882F6;
+    border: 1px solid white;
+    color: #F9FAF8;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 15px;
+}
 
-
+.footer{
+    background-color: #1F2937;
+    font-size: 18px;
+    color: #E5E7EB;
+    text-align: center;
+}
